Bug 1694791 check placeholderListener instead of window listener for enumerateDevices() abort r=jib DONTBUILD

An enumerateDevices() call before a navigation possibly should sometimes
resolve its promise even after the navigation, but that shouldn't depend on
whether another enumerateDevices() call is made with the same Window after the
navigation but before the first would resolve.

The current behavior is that listeners are removed on Document navigation, but
listeners can be added after navigation.  Testing the window listener is
checking for any listener but testing the placeholderListener checks the
listener associated with this particular operation.

Differential Revision: https://phabricator.services.mozilla.com/D114317